--- a/11_Controls/ShapeIcons/Views/Styles/MetasFavoriteCheckBoxStyle.xaml
+++ b/11_Controls/ShapeIcons/Views/Styles/MetasFavoriteCheckBoxStyle.xaml
@@ -28,6 +28,14 @@
     </Style>
 
     <Style x:Key="MetasFavoriteCheckBoxStyle" TargetType="{x:Type CheckBox}" >
+        <Setter Property="ToolTip">
+            <Setter.Value>
+                <ToolTip>
+                    <TextBlock Text="お気に入り表示"
+                               Foreground="{StaticResource ForegroundBrushKey}" />
+                </ToolTip>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
