--- a/07_WindowTheme/WindowChrome/Styles/Controls.xaml
+++ b/07_WindowTheme/WindowChrome/Styles/Controls.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary Source="Controls.FocusVisualStyle.xaml" />
         -->
         <ResourceDictionary Source="Controls.Menu.xaml" />
-        <!--
+        <!--Controls
         <ResourceDictionary Source="Controls.PasswordBox.xaml" />
         -->
         <ResourceDictionary Source="Controls.RadioButton.xaml" />
