--- a/11_Controls/ShapeIcons/Views/Styles/FaceCheckBoxStyle.xaml
+++ b/11_Controls/ShapeIcons/Views/Styles/FaceCheckBoxStyle.xaml
@@ -50,6 +50,14 @@
     </Style>
 
     <Style x:Key="FaceOnIconStyle" TargetType="{x:Type Control}" >
+        <Setter Property="ToolTip">
+            <Setter.Value>
+                <ToolTip>
+                    <TextBlock Text="顔"
+                               Foreground="{StaticResource ForegroundBrushKey}" />
+                </ToolTip>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Control}" >
