--- a/11_Controls/ShapeIcons/Views/Styles/ImageRotateButtonStyle.xaml
+++ b/11_Controls/ShapeIcons/Views/Styles/ImageRotateButtonStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
 
-    <Style x:Key="ColorZoneIconStyle" TargetType="{x:Type Control}" >
+    <Style x:Key="RotateIconStyle" TargetType="{x:Type Control}" >
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Control}" >
@@ -18,8 +18,6 @@
                                             Value="{Binding BorderBrush, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Control}}}"  />
                                 </Style>
                                 <Style TargetType="{x:Type Polygon}">
-                                    <Setter Property="StrokeThickness"
-                                            Value="4" />
                                     <Setter Property="Fill"
                                             Value="{Binding BorderBrush, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Control}}}"  />
                                 </Style>
@@ -38,32 +36,36 @@
                                 </Path.Data>
                             </Path>
 
-                            <!-- C -->
                             <Path>
                                 <Path.Data>
                                     <CombinedGeometry GeometryCombineMode="Exclude">
                                         <CombinedGeometry.Geometry1>
                                             <CombinedGeometry GeometryCombineMode="Xor">
                                                 <CombinedGeometry.Geometry1>
-                                                    <EllipseGeometry RadiusX="42" RadiusY="38" Center="75,103" />
+                                                    <EllipseGeometry RadiusX="70" RadiusY="70" Center="100,100" />
                                                 </CombinedGeometry.Geometry1>
                                                 <CombinedGeometry.Geometry2>
-                                                    <EllipseGeometry RadiusX="30" RadiusY="21" Center="83,103" />
+                                                    <EllipseGeometry RadiusX="45" RadiusY="45" Center="100,100" />
                                                 </CombinedGeometry.Geometry2>
                                             </CombinedGeometry>
                                         </CombinedGeometry.Geometry1>
                                         <CombinedGeometry.Geometry2>
-                                            <RectangleGeometry Rect="91,60,40,90" />
+                                            <RectangleGeometry Rect="0,0,70,70" >
+                                                <RectangleGeometry.Transform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform ScaleX="1.05" ScaleY="0.65"/>
+                                                        <SkewTransform/>
+                                                        <RotateTransform Angle="56"/>
+                                                        <TranslateTransform X="152" Y="102"/>
+                                                    </TransformGroup>
+                                                </RectangleGeometry.Transform>
+                                            </RectangleGeometry>
                                         </CombinedGeometry.Geometry2>
                                     </CombinedGeometry>
                                 </Path.Data>
                             </Path>
 
-                            <!-- Z -->
-                            <Polygon Points="110,67 164,67 164,76 161,80 110,80" />
-                            <Polygon Points="160,70 161,80 124,130 107,130 107,128 145,78" />
-                            <Polygon Points="120,125 164,125 164,138 107,138 107,128" />
-
+                            <Polygon Points="123,100 187,100 156,150" />
                         </Grid>
                     </Viewbox>
                 </ControlTemplate>
@@ -71,28 +73,54 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ColorZoneCheckBoxStyle" TargetType="{x:Type CheckBox}" >
+    <Style x:Key="ImageRightRotateButtonStyle" TargetType="{x:Type Button}" >
+        <Setter Property="ToolTip">
+            <Setter.Value>
+                <ToolTip>
+                    <TextBlock Text="右回転"
+                               Foreground="{StaticResource ForegroundBrushKey}" />
+                </ToolTip>
+            </Setter.Value>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="CheckBox.IsChecked"
-                                 Value="True">
-                            <Setter TargetName="ColorZoneButtonIcon"
-                                    Property="Control.BorderBrush"
-                                    Value="{StaticResource AccentBrushKey}" />
-                        </Trigger>
-                        <Trigger Property="ButtonBase.IsMouseOver"
-                                 Value="True">
-                            <Setter TargetName="ColorZoneButtonIcon"
+                        <Trigger Property="ButtonBase.IsMouseOver" Value="True">
+                            <Setter TargetName="RotateButtonIcon"
                                     Property="Control.BorderBrush"
                                     Value="{StaticResource Highlight2BorderBrushKey}" />
                         </Trigger>
+                        <Trigger Property="ButtonBase.IsPressed" Value="True">
+                            <Setter TargetName="RotateButtonIcon"
+                                    Property="Control.BorderBrush"
+                                    Value="{StaticResource AccentBrushKey}" />
+                        </Trigger>
                     </ControlTemplate.Triggers>
-                    <Control x:Name="ColorZoneButtonIcon"
-                             Style="{StaticResource ColorZoneIconStyle}"
-                             BorderBrush="{StaticResource BorderBrushKey}" />
+                    <Control x:Name="RotateButtonIcon"
+                             Style="{StaticResource RotateIconStyle}"
+                             BorderBrush="{StaticResource BorderBrushKey}"/>
                 </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ImageLeftRotateButtonStyle"
+           TargetType="{x:Type Button}"
+           BasedOn="{StaticResource ImageRightRotateButtonStyle}" >
+        <Setter Property="ToolTip">
+            <Setter.Value>
+                <ToolTip>
+                    <TextBlock Text="左回転"
+                               Foreground="{StaticResource ForegroundBrushKey}" />
+                </ToolTip>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="RenderTransformOrigin"
+                Value="0.5,0.5" />
+        <Setter Property="RenderTransform" >
+            <Setter.Value>
+                <ScaleTransform ScaleX="-1" />
             </Setter.Value>
         </Setter>
     </Style>
