--- a/11_Controls/ShapeIcons/Views/Styles/ContextMenuBaseStyle.xaml
+++ b/11_Controls/ShapeIcons/Views/Styles/ContextMenuBaseStyle.xaml
@@ -43,54 +43,32 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type MenuItem}">
-                    <Border x:Name="MenuItemBorder"
-                            BorderThickness="1">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"
-                                                  SharedSizeGroup="Icon" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto"
-                                                  SharedSizeGroup="Shortcut" />
-                                <ColumnDefinition Width="13" />
-                            </Grid.ColumnDefinitions>
-                            <ContentPresenter x:Name="Icon"
-                                              Margin="3,0"
-                                              VerticalAlignment="Center"
-                                              ContentSource="Icon" />
-                            <Border x:Name="CheckBorder"
-                                    Width="13"
-                                    Height="13"
-                                    Visibility="Collapsed"
-                                    Margin="3,0"
-                                    BorderThickness="1" >
-                                <Path x:Name="CheckMark"
-                                      Width="11"
-                                      Height="7"
-                                      Visibility="Hidden"
-                                      SnapsToDevicePixels="False"
-                                      StrokeThickness="2"
-                                      Data="M 2 2 L 5 6 M 5 6 L 10 0"
-                                      Stroke="{StaticResource ForegroundBrushKey}" />
-                            </Border>
-                            <ContentPresenter x:Name="HeaderHost"
-                                              Grid.Column="1"
-                                              ContentSource="Header"
-                                              RecognizesAccessKey="True" />
-                            <TextBlock x:Name="InputGestureText"
-                                       Grid.Column="2"
-                                       Text="{TemplateBinding InputGestureText}"
-                                       Margin="5,1,0,1"
-                                       FontSize="11"
-                                       DockPanel.Dock="Right" />
-                        </Grid>
-                    </Border>
+                    <Grid x:Name="Ground"
+                          Background="Transparent"
+                          Margin="1" >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="17" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="13" />
+                        </Grid.ColumnDefinitions>
+
+                        <Path x:Name="CheckMark"
+                              Width="11"
+                              Height="7"
+                              IsHitTestVisible="False"
+                              SnapsToDevicePixels="False"
+                              StrokeThickness="2"
+                              Data="M 2 2 L 5 6 M 5 6 L 10 0"
+                              Stroke="{StaticResource ForegroundBrushKey}" />
+
+                        <ContentPresenter Grid.Column="1"
+                                          ContentSource="Header"
+                                          RecognizesAccessKey="True" />
+                    </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="ButtonBase.Command"
-                                 Value="{x:Null}" />
-                        <Trigger Property="Icon"
-                                 Value="{x:Null}">
-                            <Setter TargetName="Icon"
+                        <Trigger Property="IsChecked"
+                                 Value="False">
+                            <Setter TargetName="CheckMark"
                                     Property="Visibility"
                                     Value="Hidden" />
                         </Trigger>
@@ -100,25 +78,11 @@
                                     Property="Visibility"
                                     Value="Visible" />
                         </Trigger>
-                        <Trigger Property="IsCheckable"
-                                 Value="True">
-                            <Setter TargetName="CheckBorder"
-                                    Property="Visibility"
-                                    Value="Visible" />
-                            <Setter TargetName="Icon"
-                                    Property="Visibility"
-                                    Value="Hidden" />
-                        </Trigger>
                         <Trigger Property="IsHighlighted"
                                  Value="True">
-                            <Setter Property="Background"
-                                    TargetName="MenuItemBorder"
+                            <Setter TargetName="Ground"
+                                    Property="Background"
                                     Value="{StaticResource ActiveBackgroundBrushKey}" />
-                            <!--
-                            <Setter Property="BorderBrush"
-                                    TargetName="MenuItemBorder"
-                                    Value="{StaticResource ActiveBorderBrushKey}" />
-                            -->
                             <Setter Property="Foreground"
                                     Value="{StaticResource ActiveForegroundBrushKey}" />
                         </Trigger>
