--- a/07_WindowTheme/WindowChrome/MainWindow.xaml
+++ b/07_WindowTheme/WindowChrome/MainWindow.xaml
@@ -140,7 +140,7 @@
                 <TextBlock Grid.Column="0"
                            x:Name="CaptionTitle"
                            Margin="5,0,0,0"
-                           FontSize="24"
+                           FontSize="22"
                            VerticalAlignment="Center"
                            TextAlignment="Center"
                            Text="●" >
@@ -181,7 +181,8 @@
                 <Grid Grid.Column="3"
                       HorizontalAlignment="Right" 
                       VerticalAlignment="Top" >
-                    <StackPanel Orientation="Horizontal" >
+                    <StackPanel Height="{Binding Height, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"
+                                Orientation="Horizontal" >
                         <!-- 最小化ボタン
                                 Visibility="{Binding ResizeMode, Converter={StaticResource ResizeCaptionButtonVisibilityConverterKey}, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
                                 ToolTip="最小化"
